--- a/podcast/_posts/2019-08-25-id-check.md
+++ b/podcast/_posts/2019-08-25-id-check.md
@@ -1,6 +1,6 @@
 ---
 title: "I.D. Check"
-category: "Gospel of John"
+category: "The Gospel of John"
 speaker: Charles Smith
 mp3: 20190825.mp3
 size: 52433024
