Fix quoted durations

--- a/podcast/_posts/2024-12-15-wait-wait.md
+++ b/podcast/_posts/2024-12-15-wait-wait.md
@@ -3,7 +3,7 @@ title: "Wait, What?"
 category: "Boulevard of Broken Dreams"
 speaker: "Charles Smith"
 mp3: 20241215.mp3
-size: "37705484"
+size: 37705484
 duration: "26:11"
 image: logo.jpg
 ---
